--- a/Project_Report.ipynb
+++ b/Project_Report.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -107,6 +107,73 @@
       ")\n",
       "\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A tibble: 6 × 9</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>mean_int_prof</th><th scope=col>sd_int_prof</th><th scope=col>kurt_int_prof</th><th scope=col>skew_int_prof</th><th scope=col>mean_curve</th><th scope=col>sd_curve</th><th scope=col>kurt_curve</th><th scope=col>skew_curve</th><th scope=col>class</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;fct&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>140.56250</td><td>55.68378</td><td>-0.23457141</td><td>-0.6996484</td><td>3.199833</td><td>19.11043</td><td> 7.975532</td><td> 74.24222</td><td>0</td></tr>\n",
+       "\t<tr><td>102.50781</td><td>58.88243</td><td> 0.46531815</td><td>-0.5150879</td><td>1.677258</td><td>14.86015</td><td>10.576487</td><td>127.39358</td><td>0</td></tr>\n",
+       "\t<tr><td>103.01562</td><td>39.34165</td><td> 0.32332837</td><td> 1.0511644</td><td>3.121237</td><td>21.74467</td><td> 7.735822</td><td> 63.17191</td><td>0</td></tr>\n",
+       "\t<tr><td>136.75000</td><td>57.17845</td><td>-0.06841464</td><td>-0.6362384</td><td>3.642977</td><td>20.95928</td><td> 6.896499</td><td> 53.59366</td><td>0</td></tr>\n",
+       "\t<tr><td> 88.72656</td><td>40.67223</td><td> 0.60086608</td><td> 1.1234917</td><td>1.178930</td><td>11.46872</td><td>14.269573</td><td>252.56731</td><td>0</td></tr>\n",
+       "\t<tr><td> 93.57031</td><td>46.69811</td><td> 0.53190485</td><td> 0.4167211</td><td>1.636288</td><td>14.54507</td><td>10.621748</td><td>131.39400</td><td>0</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 6 × 9\n",
+       "\\begin{tabular}{lllllllll}\n",
+       " mean\\_int\\_prof & sd\\_int\\_prof & kurt\\_int\\_prof & skew\\_int\\_prof & mean\\_curve & sd\\_curve & kurt\\_curve & skew\\_curve & class\\\\\n",
+       " <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <fct>\\\\\n",
+       "\\hline\n",
+       "\t 140.56250 & 55.68378 & -0.23457141 & -0.6996484 & 3.199833 & 19.11043 &  7.975532 &  74.24222 & 0\\\\\n",
+       "\t 102.50781 & 58.88243 &  0.46531815 & -0.5150879 & 1.677258 & 14.86015 & 10.576487 & 127.39358 & 0\\\\\n",
+       "\t 103.01562 & 39.34165 &  0.32332837 &  1.0511644 & 3.121237 & 21.74467 &  7.735822 &  63.17191 & 0\\\\\n",
+       "\t 136.75000 & 57.17845 & -0.06841464 & -0.6362384 & 3.642977 & 20.95928 &  6.896499 &  53.59366 & 0\\\\\n",
+       "\t  88.72656 & 40.67223 &  0.60086608 &  1.1234917 & 1.178930 & 11.46872 & 14.269573 & 252.56731 & 0\\\\\n",
+       "\t  93.57031 & 46.69811 &  0.53190485 &  0.4167211 & 1.636288 & 14.54507 & 10.621748 & 131.39400 & 0\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 6 × 9\n",
+       "\n",
+       "| mean_int_prof &lt;dbl&gt; | sd_int_prof &lt;dbl&gt; | kurt_int_prof &lt;dbl&gt; | skew_int_prof &lt;dbl&gt; | mean_curve &lt;dbl&gt; | sd_curve &lt;dbl&gt; | kurt_curve &lt;dbl&gt; | skew_curve &lt;dbl&gt; | class &lt;fct&gt; |\n",
+       "|---|---|---|---|---|---|---|---|---|\n",
+       "| 140.56250 | 55.68378 | -0.23457141 | -0.6996484 | 3.199833 | 19.11043 |  7.975532 |  74.24222 | 0 |\n",
+       "| 102.50781 | 58.88243 |  0.46531815 | -0.5150879 | 1.677258 | 14.86015 | 10.576487 | 127.39358 | 0 |\n",
+       "| 103.01562 | 39.34165 |  0.32332837 |  1.0511644 | 3.121237 | 21.74467 |  7.735822 |  63.17191 | 0 |\n",
+       "| 136.75000 | 57.17845 | -0.06841464 | -0.6362384 | 3.642977 | 20.95928 |  6.896499 |  53.59366 | 0 |\n",
+       "|  88.72656 | 40.67223 |  0.60086608 |  1.1234917 | 1.178930 | 11.46872 | 14.269573 | 252.56731 | 0 |\n",
+       "|  93.57031 | 46.69811 |  0.53190485 |  0.4167211 | 1.636288 | 14.54507 | 10.621748 | 131.39400 | 0 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  mean_int_prof sd_int_prof kurt_int_prof skew_int_prof mean_curve sd_curve\n",
+       "1 140.56250     55.68378    -0.23457141   -0.6996484    3.199833   19.11043\n",
+       "2 102.50781     58.88243     0.46531815   -0.5150879    1.677258   14.86015\n",
+       "3 103.01562     39.34165     0.32332837    1.0511644    3.121237   21.74467\n",
+       "4 136.75000     57.17845    -0.06841464   -0.6362384    3.642977   20.95928\n",
+       "5  88.72656     40.67223     0.60086608    1.1234917    1.178930   11.46872\n",
+       "6  93.57031     46.69811     0.53190485    0.4167211    1.636288   14.54507\n",
+       "  kurt_curve skew_curve class\n",
+       "1  7.975532   74.24222  0    \n",
+       "2 10.576487  127.39358  0    \n",
+       "3  7.735822   63.17191  0    \n",
+       "4  6.896499   53.59366  0    \n",
+       "5 14.269573  252.56731  0    \n",
+       "6 10.621748  131.39400  0    "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -128,7 +195,9 @@
     "                                      \"kurt_curve\",\n",
     "                                      \"skew_curve\",\n",
     "                                      \"class\") ) %>%\n",
-    "                        mutate(class = as_factor(class))"
+    "                        mutate(class = as_factor(class))\n",
+    "\n",
+    "head(pulsar_data)"
    ]
   },
   {
@@ -140,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -647,17 +716,225 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "After the data is loaded and tided, we conducted an exploratory data analysis to help us decide which predictors to use for our main analysis. Our method of choice was to create a summary data set by taking the mean value of each variable for both classes, and finding the differences in each variable between the two classes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`summarise()` ungrouping output (override with `.groups` argument)\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A tibble: 2 × 9</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>class</th><th scope=col>mean_int_prof</th><th scope=col>sd_int_prof</th><th scope=col>kurt_int_prof</th><th scope=col>skew_int_prof</th><th scope=col>mean_curve</th><th scope=col>sd_curve</th><th scope=col>kurt_curve</th><th scope=col>skew_curve</th></tr>\n",
+       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>0</td><td>115.94442</td><td>47.48842</td><td>0.2092636</td><td> 0.3454768</td><td> 8.465311</td><td>23.14654</td><td>9.017230</td><td>119.0473</td></tr>\n",
+       "\t<tr><td>1</td><td> 56.77389</td><td>38.54278</td><td>3.1291547</td><td>15.5422111</td><td>49.161097</td><td>56.43474</td><td>2.795917</td><td> 18.6336</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 2 × 9\n",
+       "\\begin{tabular}{lllllllll}\n",
+       " class & mean\\_int\\_prof & sd\\_int\\_prof & kurt\\_int\\_prof & skew\\_int\\_prof & mean\\_curve & sd\\_curve & kurt\\_curve & skew\\_curve\\\\\n",
+       " <fct> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t 0 & 115.94442 & 47.48842 & 0.2092636 &  0.3454768 &  8.465311 & 23.14654 & 9.017230 & 119.0473\\\\\n",
+       "\t 1 &  56.77389 & 38.54278 & 3.1291547 & 15.5422111 & 49.161097 & 56.43474 & 2.795917 &  18.6336\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 2 × 9\n",
+       "\n",
+       "| class &lt;fct&gt; | mean_int_prof &lt;dbl&gt; | sd_int_prof &lt;dbl&gt; | kurt_int_prof &lt;dbl&gt; | skew_int_prof &lt;dbl&gt; | mean_curve &lt;dbl&gt; | sd_curve &lt;dbl&gt; | kurt_curve &lt;dbl&gt; | skew_curve &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|---|---|---|---|\n",
+       "| 0 | 115.94442 | 47.48842 | 0.2092636 |  0.3454768 |  8.465311 | 23.14654 | 9.017230 | 119.0473 |\n",
+       "| 1 |  56.77389 | 38.54278 | 3.1291547 | 15.5422111 | 49.161097 | 56.43474 | 2.795917 |  18.6336 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  class mean_int_prof sd_int_prof kurt_int_prof skew_int_prof mean_curve\n",
+       "1 0     115.94442     47.48842    0.2092636      0.3454768     8.465311 \n",
+       "2 1      56.77389     38.54278    3.1291547     15.5422111    49.161097 \n",
+       "  sd_curve kurt_curve skew_curve\n",
+       "1 23.14654 9.017230   119.0473  \n",
+       "2 56.43474 2.795917    18.6336  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# summary data set\n",
+    "pulsar_averages <- pulsar_down_train %>%\n",
+    "    group_by(class) %>%\n",
+    "    summarize(across(mean_int_prof:skew_curve, mean))\n",
+    "\n",
+    "pulsar_averages"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In creating our summary data set we grouped the data points by class and and applied the mean function to each of the variable columns for both classes using the across function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in Ops.factor(left, right):\n",
+      "“‘-’ not meaningful for factors”\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A data.frame: 1 × 9</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>class</th><th scope=col>mean_int_prof</th><th scope=col>sd_int_prof</th><th scope=col>kurt_int_prof</th><th scope=col>skew_int_prof</th><th scope=col>mean_curve</th><th scope=col>sd_curve</th><th scope=col>kurt_curve</th><th scope=col>skew_curve</th></tr>\n",
+       "\t<tr><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>NA</td><td>-59.17053</td><td>-8.945647</td><td>2.919891</td><td>15.19673</td><td>40.69579</td><td>33.2882</td><td>-6.221313</td><td>-100.4137</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 1 × 9\n",
+       "\\begin{tabular}{lllllllll}\n",
+       " class & mean\\_int\\_prof & sd\\_int\\_prof & kurt\\_int\\_prof & skew\\_int\\_prof & mean\\_curve & sd\\_curve & kurt\\_curve & skew\\_curve\\\\\n",
+       " <lgl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t NA & -59.17053 & -8.945647 & 2.919891 & 15.19673 & 40.69579 & 33.2882 & -6.221313 & -100.4137\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 1 × 9\n",
+       "\n",
+       "| class &lt;lgl&gt; | mean_int_prof &lt;dbl&gt; | sd_int_prof &lt;dbl&gt; | kurt_int_prof &lt;dbl&gt; | skew_int_prof &lt;dbl&gt; | mean_curve &lt;dbl&gt; | sd_curve &lt;dbl&gt; | kurt_curve &lt;dbl&gt; | skew_curve &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|---|---|---|---|\n",
+       "| NA | -59.17053 | -8.945647 | 2.919891 | 15.19673 | 40.69579 | 33.2882 | -6.221313 | -100.4137 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  class mean_int_prof sd_int_prof kurt_int_prof skew_int_prof mean_curve\n",
+       "1 NA    -59.17053     -8.945647   2.919891      15.19673      40.69579  \n",
+       "  sd_curve kurt_curve skew_curve\n",
+       "1 33.2882  -6.221313  -100.4137 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in Ops.factor(left, right):\n",
+      "“‘/’ not meaningful for factors”\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A data.frame: 1 × 9</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>class</th><th scope=col>mean_int_prof</th><th scope=col>sd_int_prof</th><th scope=col>kurt_int_prof</th><th scope=col>skew_int_prof</th><th scope=col>mean_curve</th><th scope=col>sd_curve</th><th scope=col>kurt_curve</th><th scope=col>skew_curve</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>NA</td><td>-51.03353</td><td>-18.83753</td><td>1395.318</td><td>4398.771</td><td>480.7359</td><td>143.815</td><td>-68.99361</td><td>-84.34773</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 1 × 9\n",
+       "\\begin{tabular}{lllllllll}\n",
+       " class & mean\\_int\\_prof & sd\\_int\\_prof & kurt\\_int\\_prof & skew\\_int\\_prof & mean\\_curve & sd\\_curve & kurt\\_curve & skew\\_curve\\\\\n",
+       " <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t NA & -51.03353 & -18.83753 & 1395.318 & 4398.771 & 480.7359 & 143.815 & -68.99361 & -84.34773\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 1 × 9\n",
+       "\n",
+       "| class &lt;dbl&gt; | mean_int_prof &lt;dbl&gt; | sd_int_prof &lt;dbl&gt; | kurt_int_prof &lt;dbl&gt; | skew_int_prof &lt;dbl&gt; | mean_curve &lt;dbl&gt; | sd_curve &lt;dbl&gt; | kurt_curve &lt;dbl&gt; | skew_curve &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|---|---|---|---|\n",
+       "| NA | -51.03353 | -18.83753 | 1395.318 | 4398.771 | 480.7359 | 143.815 | -68.99361 | -84.34773 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  class mean_int_prof sd_int_prof kurt_int_prof skew_int_prof mean_curve\n",
+       "1 NA    -51.03353     -18.83753   1395.318      4398.771      480.7359  \n",
+       "  sd_curve kurt_curve skew_curve\n",
+       "1 143.815  -68.99361  -84.34773 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "pulsar_differences <- slice(pulsar_averages, 2) - slice(pulsar_averages, 1)\n",
+    "pulsar_differences\n",
+    "\n",
+    "pulsar_percentage_difference <- pulsar_differences/slice(pulsar_averages, 1)*100\n",
+    "pulsar_percentage_difference"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then subtracted the values of the Class 1 row and those of the Class 0 row, creating a single row of differences between the two classes for each variable."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### Visualization of the dataset that is relevant for exploratory data analysis related to the planned analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "viz_averages <- pulsar_averages %>%\n",
+    "    ggplot(aes(x = ))"
    ]
   },
   {
